@@ -17,6 +17,8 @@ dpkg (1.15.8) UNRELEASED; urgency=low
   * Fix the non-regression test lib/dpkg/test/t-ar.c by not overflowing the
     size of ar_name. Thanks to Colin Watson for the report, analysis and patch.
     Closes: #582401
+  * Modify Dpkg::Shlibs::Objdump to use the cross objdump binary when cross
+    compiling. Thanks to Loïc Minier for the initial patch. Closes: #578365
 
   [ Guillem Jover ]
   * Require gettext 0.18:
